# bitmachine

./: Cargo.toml  README.md
samples/hello-world/: hello-world.bm
src/: ast.rs  bindings.rs  bitmachine.pest  bitstring.rs  bytecode.rs  callable.rs  coded_function.rs  compiled.rs  executor.rs  main.rs  native_function.rs  parser.rs  pattern.rs  translator.rs  value.rs  vm.rs
